# mpt-flat-poc

./: .gitignore  Cargo.toml  DESIGN.md  GC_DESIGN.md  README.md  RETH_INTEGRATION_PLAN.md  RUN.md  direct-ab.sh  keccak-ab.sh  parse-ab.sh  run-1b.sh  sweep-maxleaf.sh
bench-results/: README.md
benches/: insert.rs  large.rs  profile.rs
examples/: applyprofile.rs  batchcheck.rs  blockbench.rs  buildpersist.rs  diskusage.rs  ethbench.rs  ethfused.rs  foldbench.rs  hashaudit.rs  hashcount.rs  hotcontracts.rs  iops.rs  mmapseg.rs  probe5m.rs  profins.rs  readbench.rs  readcost.rs  reopen.rs  replay.rs  reprospill.rs  rethload.rs  rethload_nested.rs  rootaudit.rs  sizecheck.rs  sustain.rs  tsvdiff.rs  wsweep.rs
scripts/: batch-bench.sh  bench-fused.sh  build-1b.sh  build-baseline-1b.sh  build-tree.sh  grow-tree.sh  iops-bench.sh  reth-export.sh  run-large-bench.sh
src/: cursor.rs  eth.rs  lib.rs  state.rs
